--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/bootstrap.min.css') }}">
-
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
@@ -14,17 +14,14 @@
         <header>
 
 
-            <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
+            <nav class="navbar navbar-light">
                 <a class="navbar-brand" href="/">
-                  <h1> RS E-SHOP </h1>
+                  <h2 class="text-secondary"> RS E-SHOP </h2>
                 </a>
-
-
-
                 <div style="float: right;">
                     {% if logged_in %}
                         <a class="navbar-brand" href="/my_cart">
-                          <h2> My Cart </h2>
+                          <h2 class="text-secondary"> My Cart </h2>
                         </a>
                         <a class="navbar-brand" href="/my_account">
                             {% if user %}
@@ -34,14 +31,14 @@
                             {% endif %}
                         </a>
                         <a class="navbar-brand" href="/log_out">
-                          <h2> Log out </h2>
+                          <h2 class="text-secondary"> Log out </h2>
                         </a>
                     {% else %}
                         <a class="navbar-brand" href="/login">
-                          <h2> Login </h2>
+                          <h3 class="text-secondary"> Login </h3>
                         </a>
                         <a class="navbar-brand" href="/register">
-                          <h2> Sign up </h2>
+                          <h3 class="text-secondary"> Sign up </h3>
                         </a>
                     {% endif %}
                   </div>
@@ -49,15 +46,26 @@
 
             </nav>
             <!-- Línea separadora -->
-            <div style="width: 100%; height: 3px; background-color: blue;"></div>
+            <div style="width: 100%; height: 1px; background-color: lightblue;"></div>
 
 
         </header>
 
         {% block content %}{% endblock %}
 
-        <footer>
-            FOOTER PENDIENTE EN BASE.HTML
+        <footer class="page-footer bg-primary">
+          <ul class="list-unstyled">
+            <li>
+              <a class="text-light" href="#!">About Us</a>
+            </li>
+            <li>
+              <a target="_blank" class="text-light" href="https://www.twitter.com">Twitter</a>
+            </li>
+            <li>
+              <a target="_blank" class="text-light" href="https://www.facebook.com">Facebook</a>
+            </li>
+          
+          </ul>
         </footer>
     </body>
 </html>
