--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
                         </a>
                         <a class="navbar-brand" href="/my_account">
                             {% if user %}
-                                <h2> {{ user }} </h2>
+                                <h2> {{ user.username }} </h2>
                             {% else %}
                                 <h2> Account </h2>
                             {% endif %}
