--- a/templates/module_account/settings.html
+++ b/templates/module_account/settings.html
@@ -2,33 +2,31 @@
 
 
 {% block head %}
-<title> Sign Up </title>
+<title> Settings </title>
 <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/estilos.css') }}">
-
 {% endblock %}
 
 
 {% block content %}
 
 <div class="center">
-  <h3> Welcome to RS E-SHOP </h3>
-  <h3> Please, complete the following form </h3>
+  <h3> My Settings </h3>
 </div>
 <br><br>
 
 
 
-  <form action="/api/save_user" method="post">
+  <form action="/api/update_user" method="post">
     <div class="form-eshop">
       <br><br>
       <div class="form-group">
         <input class="form-control form-content-lg" type="text" name="name"
-        value="{{ user.fullname if user else '' }}" placeholder="Full name" required>
+        value="{{ user.fullname }}" placeholder="Full name" required>
       </div><br>
 
       <div class="form-group">
         <input class="form-control form-content-lg" type="email" name="email"
-        value="{{ user.email if user else '' }}" placeholder="E-mail" required>
+        value="{{ user.email }}" placeholder="E-mail" required>
       </div><br>
 
       <div class="form-group">
@@ -50,24 +48,21 @@
 
       <div class="form-group">
         <select class="form-control" name="city" id="city" required>
-          {% if user %}
-            <option value="{{ user.city_name }}"> {{ user.city_name }} </option>
-          {% else %}
-            <option disabled> Select a country to get cities </option>
-          {% endif %}
-
+          <option value="{{ user.city_name }}"> {{ user.city_name }} </option>
         </select>
       </div><br>
 
       <div class="form-group">
         <input class="form-control form-content-lg" type="text" name="username"
-        value="{{ user.username if user else '' }}" placeholder="Username" required>
+        value="{{ user.username }}" placeholder="Username" readonly>
       </div><br>
+
+      <h4> Enter the password two times to confirm the changes</h4><br>
 
 
       <div class="form-group">
         <input class="form-control form-content-lg" type="password" name="password"
-        value="{{ user.passwd if user else '' }}" placeholder="Password" required>
+        placeholder="Password" required>
       </div><br>
 
       <div class="form-group">
@@ -79,12 +74,10 @@
     <br><br>
     <div class="center">
       <button class="btn btn-primary" style="color: black;" type="submit">
-        Sign Me Up!
+        Save changes
       </button>
     </div>
 
-    <br><br>
-    <p class="center text-grey">Already have an account? <a href="/login">Log in</a></p>
     <br><br>
   </form>
 
