--- a/templates/module_home/product.html
+++ b/templates/module_home/product.html
@@ -8,7 +8,7 @@
 {% block content %}
 
 <div class="container text-center">
-    <img class="mt-2" src={{product.img_path}}>
+    <img class="mt-2" src= {{ url_for('static', filename = '') }}{{product.img_path}}>
     <div>
     {{product.name}}
     </div>
@@ -38,7 +38,7 @@
       {% for x in similar %}
       <div class ="col-md-4 col-sm-6 col-xs-12">
           <div class="shop-item">
-            <a href="/product?view={{x.id_product}}"><img width="223px" src="{{x.img_path}}"></a>
+            <a href="/product?view={{x.id_product}}"><img width="223px" src= {{ url_for('static', filename = '') }}{{x.img_path}}></a>
             <div>
                 <a href="/product?view={{x.id_product}}">{{x.name}}</a>
             </div>
