--- a/templates/module_home/index.html
+++ b/templates/module_home/index.html
@@ -7,17 +7,17 @@
 
 
 {% block content %}
+
 <form action="/search" method="get" class="form-inline active-pink-3 active-pink-4 justify-content-center mt-4 ">
     <input class="form-control form-control-sm ml-3 w-50 mr-1" type="text" placeholder="What are you looking for?"
       aria-label="Search" name="q">
       <span><button type="submit" class="btn btn-primary">Search</button></span>
   </form>
   <hr> 
-{% if not logged_in %}
-<!-- Html when not logged In -->
- 
- 
 
+{% if not logged_in %}
+
+<!-- Best Sellers -->
   <div class="container mb-5">
       <h3 class="mb-2"><strong>Best Sellers</strong></h3>
       <div class="row">
@@ -48,9 +48,89 @@
   </div>
 
 
+  {% else %}
 
+
+<!-- Personalized Recommendations -->
+<div class="container mb-5">
+    <h3 class="mb-2"><strong>Recommended for you</strong></h3>
+    <div class="row">
+      {% for x in recp %}
+      <div class ="col-md-4 col-sm-6 col-xs-12">
+          <div class="shop-item">
+              <a href="/product?view={{x.id_product}}"><img width="223px" src= {{ url_for('static', filename = '') }}{{x.img_path}}></a>
+              <div>
+                  <a href="/product?view={{x.id_product}}">{{x.name}}</a>
+              </div>
+              <div>
+                  <a href="/product?view={{x.id_product}}">{{x.price}}</a>
+              </div>
+              <div>
+                  {% for y in range(x.avgrating|int) %}
+                  <span class="fa fa-star checked text-warning"></span>
+                  {% endfor %}
+                  {%for z in range(5-(x.avgrating|int))%}
+                  <span class="fa fa-star"></span>
+                  {% endfor %}
+              </div>
+          </div>
+      </div> 
+      {% endfor %}
+    </div>
+</div>
+
+
+<!-- Group Recommendations -->
+
+<div class="container mb-5">
+    <h3 class="mb-2"><strong>Based on your location</strong></h3>
+    <div class="row">
+      {% for x in recg %}
+      <div class ="col-md-4 col-sm-6 col-xs-12">
+          <div class="shop-item">
+              <a href="/product?view={{x.id_product}}"><img width="223px" src= {{ url_for('static', filename = '') }}{{x.img_path}}></a>
+              <div>
+                  <a href="/product?view={{x.id_product}}">{{x.name}}</a>
+              </div>
+              <div>
+                  <a href="/product?view={{x.id_product}}">{{x.price}}</a>
+              </div>
+              <div>
+                  {% for y in range(x.avgrating|int) %}
+                  <span class="fa fa-star checked text-warning"></span>
+                  {% endfor %}
+                  {%for z in range(5-(x.avgrating|int))%}
+                  <span class="fa fa-star"></span>
+                  {% endfor %}
+              </div>
+          </div>
+      </div> 
+      {% endfor %}
+    </div>
+</div>
+
+<!-- User Favorite Category -->
+
+<div class="container text-center">
+    <h3 class="mb-2 "><strong>Your Favorite Category</strong></h3>
+    <div class="row">
+        <div class ="col-sm">
+            <div class="category-option ">
+                <h5>
+                    {{ cat.category_name }}
+                </h5>
+                <a href="/category/{{cat.category_name}}"><img width="223px" src="static/images/categories/{{cat.category_name}}.png"></a>
+            </div>
+        </div> 
+      </div>
+  </div>
+
+
+{% endif %}
+
+<!-- All Categories -->
   <div class="container">
-    <h3 class="mb-2"><strong>Categories</strong></h3>
+    <h3 class="mb-2"><strong>All categories</strong></h3>
     <div class="row">
         {% for x in categories %}
         <div class ="col-sm">
@@ -68,6 +148,7 @@
 
 
   
+<!-- Top Rated Products -->
   <div class="container mb-5">
       <h3 class="mb-2"><strong>Top Rated</strong></h3>
       <div class="row">
@@ -95,11 +176,6 @@
       </div>
   </div>
 
-  {% else %}
-  <!-- Html when logged In -->
-  <h1>Logged Home</h1>
-
-  {% endif %}
-  
+ 
 {% endblock %}
 
