--- a/templates/module_home/mycart.html
+++ b/templates/module_home/mycart.html
@@ -6,6 +6,33 @@
 
 {% block content %}
 <h1 class="text-center">My Cart</h1>
-
+{% if prods %}
+<div class="container">
+    <table class="table table-striped table-bordered">
+        <tr>
+            <th>Product Name</th>
+            <th>Quantity</th>
+            <th>Price</th>
+            <th>Total</th>
+            <th>Remove Item</th>
+        </tr>
+        {% for product in prods %}
+        <tr>
+            <input type="hidden" name="product_id" value="{{product.id_product}}">
+            <td>{{product.product_name}}</td>
+            <td>{{product.quantity}}</td>
+            <td>{{product.price}}</td>
+            <td>{{product.total}}</td>
+            <td><button class="btn btn-danger text-center">Delete</button></td>
+        </tr>
+        {% endfor %}
+    </table>
+    <hr>
+</div>
+<h1 class="text-center"><strong>Total</strong></h1>
+<h1 class="text-center">{{total}}</h1>
+{% else %}
+<h1 class="text-center">You have no products in your cart!</h1>
+{% endif %}
 
 {% endblock %}
