--- a/templates/module_admin/panel.html
+++ b/templates/module_admin/panel.html
@@ -36,7 +36,7 @@
     <br><br>
     <button class="btn btn-primary" onclick="addProduct">
         <a href="/admin/panel/addProduct" style="color: white;">
-           Agregar producto
+           Add product
         </a>
     </button><br><br>
 
