--- a/templates/base_admin.html
+++ b/templates/base_admin.html
@@ -23,7 +23,7 @@
                         <a class="navbar-brand" href="/admin/dashboard">
                           <h2 class="text-secondary"> Dashboard </h2>
                         </a>
-                        <a class="navbar-brand" href="/admin/my_account">
+                        <a class="navbar-brand" href="/admin/settings">
                             {% if user %}
                                 <h2> {{ user.username }} </h2>
                             {% else %}
